attempt to fix rounding on mobile v3

--- a/styles.css
+++ b/styles.css
@@ -359,7 +359,7 @@ section {
     }
 
     .food .scroll-container img {
-        height: 100%;
+        height: auto;
         max-height: 380px;
         width: auto;
         padding: 8px;
